--- a/style.css
+++ b/style.css
@@ -138,6 +138,51 @@ div.container-fluid {
   height: 230px;
 }
 
+/* -----Project block----- */
+.projects {
+  text-align: center;
+}
+.projectLink {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin: 1%;
+  position: relative;
+}
+.projectLink img {
+  width: 100%;
+  height: 100%;
+  border: 2px solid gray;
+  box-shadow: 5px 7px 10px #979696;
+  display: block;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: #17272c;
+}
+.projectLink:hover .overlay {
+  opacity: 0.7;
+}
+.projectName {
+  color: white;
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 /* -----Location block----- */
 .locationBlock .locationMap {
   width: 100%;
